main/css/icpnatdp/default.css
/* ... */
footer .facebook{
    background:url(images/social-media.png) no-repeat 0 0;
    width: 30px;
    height: 30px;
}
footer .facebook:hover{
    background:url(images/social-media.png) no-repeat 0 -30px;
}
footer .facebook a{
    display: block;
    width: 30px;
    height: 30px;
    text-indent: -9999px;
}
footer .twitter{
    background:url(images/social-media.png) no-repeat -29px 0;
    width: 30px;
    height: 30px;
}
footer .twitter:hover{
    background:url(images/social-media.png) no-repeat -29px -30px;
}
footer .twitter a{
    display: block;
    width: 30px;
    height: 30px;
    text-indent: -9999px;
}
footer .youtube{
    background:url(images/social-media.png) no-repeat -60px 0;
    width: 30px;
    height: 30px;
}
footer .youtube:hover{
    background:url(images/social-media.png) no-repeat -60px -30px;
}
footer .youtube a{
    display: block;
    width: 30px;
    height: 30px;
    text-indent: -9999px;
}
/*****************************************************
 *  DISPLAY MESSAGES                               *
 *****************************************************/
.normal-message {
    color: #00407F;
    border: 1px solid #CDE6F5;
    background: url("images/background_message.png") repeat-x scroll 0 0 #EAF8FE;
}
.warning-message {
    border: 1px solid #FFB30F;
    color: #000;
  background: url("images/background_message.png") repeat-x scroll 0 0 #FFEFA7;
}
.confirmation-message {
  border: 1px solid #1F8323;
    color:#1F8323;
  background: url("images/background_message.png") repeat-x scroll 0 0 #CAF0C7;
}
.error-message {
    border: 1px solid #FF0000;
    color: #440000;
  background: url("images/background_message.png") repeat-x scroll 0 0 #FFD1D1;
}

.social-menu-title {
  background-color:#00AAE3;
}

#social-content-online {
    background-color:#00AAE3;
}
    
.admin_section li {
    background-image:url(images/bullet.gif);
}

.system_announcements {
    background: transparent url('images/systemenouvelles.jpg') no-repeat top  left;
}

.topa {
    background:transparent url('images/logoa4.gif') no-repeat;
}
.topb {
    background:transparent url('images/logob4.gif') no-repeat;
}

#bottomhellomindfactory {    
    background:transparent url('images/textologo.jpg') no-repeat;
}

/*including "login" image*/
button.login {
    background-image:url(images/bg-button.gif);
}

button.login:hover {
}

/*including "save" image*/
button.save {
    background-image:url(images/button_accept.gif);
}
/*including "add" image*/
button.add {
    background-image:url(images/button_add.gif);
}
/*including "cancel" image*/
button.cancel {
    background-image:url(images/button_delete.gif);
}
/*including "search" image*/
button.search {
    background-image:url(images/bg-button.gif);
}
/*including "plus" image*/
button.plus {
    background-image:url(images/button_plus.gif);
}
/*including "minus" image*/
button.minus {
    background-image:url(images/button_minus.gif);
}
/*including "next" image*/
button.next {
    background-image:url(images/button_next.gif) !important;
}
/*including "back" image*/
button.back {
    background-image:url(images/button_back.gif);
}
/*including "refresh" image*/
button.refresh {
    background-image:url(images/button_refresh.gif);
}
/*including "upload" image*/
button.upload {
    background-image:url(images/button_upload.gif);
}

button.arrowr, input.arrowr {
  background-image:url(images/2rightarrow.gif); 
}
button.arrowl, input.arrowl {
    background-image:url(images/2leftarrow.gif);  
}
.refresh {
    background-image:url(images/refresh.png);
}

.portal {
    background-image:url(images/portal.png);
}

/* ESTILOS PARA EL THEMPLATE CHAMILO ICPNA MODULO*/

header{
    background: #0134a1; /* Old browsers */
}
header #logo {
  padding: 1.6em;
  text-align: center;
}

.col-lg-4 {
  width: 33.3333%;
}
.col-lg-8 {
  width: 66.6667%;
}
.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
  float: left;
}
.main-inicio{
    margin-left: 40px;
}
.main-inicio a{
    color: #fff;
    font-size: 1.5em;
}
.main-inicio a:hover{
    text-decoration: underline;
}
.home-ico {
  background: url("images/home.png") no-repeat scroll 15px center / 23px 23px rgba(0, 0, 0, 0);
  font-size: 10px;
  margin-top: 2.1em;
  padding-left: 4em;
  padding-top: 0.7em;
}
.text-right{
  text-align: right;
}

#bar-animation {
    background-color: #fff;
    /*padding: 4px 4px 4px 4px;*/
    height: 8px;
    border-radius: 8px;
    -moz-border-radius: 8px;
    -webkit-border-radius: 8px;
    -khtml-border-radius: 8px;
    width: 100%;
    display: inline-block;
}
#bar-animation span{
    background: url("images/progress-ticker.png") no-repeat;
    font-size: 10px;
    padding: 0 6px 1px;
    position: absolute;
    right: 0;
    top: -23px;
}
.color-bar-process {
    height: 8px;
    position:absolute;
    /*line-height: 14px;*/
    text-align: right;
    width: 0;
    border-radius: 8px;
    -moz-border-radius: 8px;
    -webkit-border-radius: 8px;
    -khtml-border-radius: 8px;
}
.color-bar-process span {
    padding-right: 5px;
    font-family: "Tahoma", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
    color: #fff;
    top: -20px;
}
.blue-back-bar{
    background-color: #5e92ff;
    /*padding-left:30px;
}*/
.blue-back-bar span{
  /*text-indent:-20px;
  display:block;*/
}


.text-module {
  color: #325DC6;
  font-size: 30px;
  padding-top: 0.3em;
  text-align: right;
}
.text-message{
    color: #325DC6;
    font-size: 12px;
}
.padding-text-module{
    padding-top: 1em;
    padding-bottom: 1em;
}
.text-vertical{
    -webkit-transform: rotate(270deg);
    -moz-transform: rotate(270deg);
    -o-transform: rotate(270deg);
    font-size: 1.4em;
    padding-top: 4em;
    text-align: center;
    color: #808080;
}
/* ... */

